--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hotjar/browser": "^1.0.9",
     "@react-icons/all-files": "^4.1.0",
+    "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.4.7",
     "next": "14.1.3",
     "nodemailer": "^6.9.14",
     "react": "^18",
